overflow issue on mobile & transitions

--- a/app/src/styles/animated-text.less
+++ b/app/src/styles/animated-text.less
@@ -6,6 +6,6 @@
 
 		font-size: 75px;
 		opacity: 0;
-		transition: opacity 2s;
+		transition: opacity 2s ease-in;
 	}
 }
