--- a/app/src/styles/main.less
+++ b/app/src/styles/main.less
@@ -9,12 +9,15 @@ body {
 	margin: 0;
 
 	background-color: #FFF;
-
-	overflow: hidden;
 }
 
 .home {
-	height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+		height: 100vh;
+		overflow: hidden;
 
 	.container {
 		position: absolute;
