--- a/app/src/styles/nav-slider.less
+++ b/app/src/styles/nav-slider.less
@@ -23,7 +23,7 @@
     	background-color: white;
 
     	z-index: 2;
-    	transition: top 1s;
+    	transition: top 1s ease-out;
 
     	.placeholder {
     		margin-top: 18px;
@@ -49,7 +49,7 @@
     	background-color: black;
 
     	z-index: 1;
-    	transition: top 1s;
+    	transition: top 1s ease-out;
     }
 	}
 
@@ -59,6 +59,6 @@
 
 		background-color: red;
 
-		transition: margin 1s;
+		transition: margin 1s ease-out;
 	}
 }
