--- a/app/src/styles/rotating-text.less
+++ b/app/src/styles/rotating-text.less
@@ -6,7 +6,7 @@
 		span {
 			font-size: 30px;
 
-			transition: opacity 1s;
+			transition: opacity 1s ease-in;
 		}
 	}	
 }
